add suggested articles list